exercise 3: fix overflow on options

--- a/src/components/ButtonRow/ButtonRow.module.css
+++ b/src/components/ButtonRow/ButtonRow.module.css
@@ -1,2 +1,5 @@
 .buttonRow {
+    padding: 24px 0;
+    white-space: nowrap;
+    overflow: auto;
 }
